--- a/styles.css
+++ b/styles.css
@@ -1,13 +1,13 @@
 
 div.grid {
     margin: 5px;
-    border: 1px solid #ccc;
+    border: 1px solid #82ccdd;
     float: left;
     width: 180px;
 }
 
 div.grid:hover {
-    border: 1px solid #777;
+    border: 1px solid #4a69bd;
 }
 
 div.grid img {
